# core

./: .env.template  .gitignore  Cargo.toml  README.md  biome.json  contract.json  definitions.json  definitions.ts  deploy-staging.sh  deploy.sh  haithe.json  index.ts  nixpacks.toml  package-lock.json  package.json  run-rust-server.py  test.rs  test.ts  test_signing.rs  tsconfig.json
.github/workflows/: deploy.yml  staging.yml
cargo/: .env.template  Cargo.toml  definitions.json  nixpacks.toml
cargo/crates/: macros.rs  main.rs  utils.rs
cargo/crates/lib/: analytics_logger.rs  contracts.rs  discord.rs  error.rs  extractors.rs  llm.rs  mod.rs  models.rs  respond.rs  state.rs  telegram.rs
cargo/crates/routes/: mod.rs
cargo/crates/routes/api/: mod.rs
cargo/crates/routes/api/v1/: analytics.rs  auth.rs  creator.rs  me.rs  mod.rs  models.rs  orgs.rs  products.rs  projects.rs  stats.rs  tee.rs
cargo/crates/routes/api/v1beta/: chat.rs  mod.rs  webhook.rs
cargo/crates/routes/api/v1beta/openai/: chat.rs  mod.rs  models.rs
cargo/data/migrations/: add_analytics_logs_table.sql  add_api_calls_table.sql  down.sql  up.sql
crates/: macros.rs  main.rs  utils.rs
crates/lib/: contracts.rs  error.rs  extractors.rs  mod.rs  models.rs  respond.rs  state.rs
crates/routes/: mod.rs
data/: types.d.ts
data/migrations/: down.sql  up.sql
docs/: agent-guide.md  tech-contracts.md  tech-frontend.md  tech-rust.md  user-guide.md
services/: definitions.ts  interface.ts  package.json
services/clients/: auth.ts  creator.ts  index.ts  orgs.ts  products.ts  projects.ts
(+24 files in other folders)
