[package]
name = "haithe"
version = "0.1.0"
edition = "2024"
default-run = "main"

[[bin]]
name = "main"
path = "crates/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
] }
actix-web = "4.9.0"
alith = { git = "https://github.com/0xLazAI/alith", version = "0.11.0", features = [
    "crypto",
    "ipfs",
    "lazai",
    "wallet",
    "marlin",
] }
chrono = "0.4"
ethers = "2.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
dotenvy = "0.15.7"
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
tokio = "1.46.1"
url = "2.5.4"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
futures-executor = "0.3.31"
thiserror = "2.0.12"
stderrlog = "0.6.0"
secp256k1 = "0.28"
sha3 = "0.10"
hex = "0.4.3"
bincode = { version = "2.0.1", features = ["serde"] }
actix-cors = "0.7.1"
rand = "0.8"
rsa = "0.9"
pkcs1 = "0.7"
schemars = "0.8"
